<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >

    <TextView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/im_sky_blue"
        android:textSize="50sp"
        android:layout_marginHorizontal="60dp"
        android:fontFamily="@font/ptserif_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_text_blue"
        android:layout_marginTop="60dp"/>


    <TextView
        android:id="@+id/login_mesg"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="To start, enter your information below"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:id="@+id/login_account_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_mesg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Type"
            android:textColor="@color/text"/>

        <Spinner
            android:id="@+id/login_account_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:background="@drawable/background_text_solid_white"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_username_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_account_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:hint="Enter Username Here"
            android:background="@drawable/background_text_solid_white"
            android:padding="8dp"
            android:importantForAutofill="no"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_password_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_username_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Enter Password Here"
            android:inputType="textPassword"
            android:textSize="15dp"
            android:background="@drawable/background_text_solid_white"
            android:padding="8dp"
            android:importantForAutofill="no"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:layout_marginHorizontal="60dp"
        android:backgroundTint="@color/text"
        app:layout_constraintTop_toBottomOf="@id/login_password_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="Signup"
        android:textColor="@color/text"
        android:textSize="15sp"
        app:cornerRadius="12dp"
        android:layout_marginHorizontal="60dp"
        android:fontFamily="@font/open_sans_bold"
        android:backgroundTint="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>